`Refactored frontend code to use Redux for state management and updated backend configuration to match new API endpoints and security settings.`